fix: layout shift next video popup

--- a/src/routes/Player/NextVideoPopup/styles.less
+++ b/src/routes/Player/NextVideoPopup/styles.less
@@ -11,7 +11,7 @@
     @keyframes slide-fade-in {
         0% {
             opacity: 0;
-            transform: translateX(calc(40rem + 2rem));
+            transform: translateX(15rem);
         }
 
         100% {
